*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -174,7 +174,7 @@
 								SDK 3.1 and JDK 1.5.&nbsp; To set up a workspace 
 								for mylar development:<br>
 								- Add CVS location: dev.eclipse.org 
-								/home/technology <br>
+								/home/technology<br>
 								- Check out all of the projects under 
 								org.eclipse.mylar</td>
 							</tr>
@@ -342,9 +342,14 @@
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
 								<p class="smallParagraph">Used 
-						for running the user study, and hosted at UBC 
-								for the duration of the study.&nbsp; If you have 
-								access to the UBC repository:<br>
+						for running the 
+								<a href="http://eclipse.org/mylar/ubc-study.html">user study</a>, 
+								the Mylar monitor records, obfuscates, and 
+								uploads usage statistics to a UBC server.&nbsp; 
+								To assure the integrity of the study data the 
+								sources are on a non-public UBC server for the 
+								duration of the study. If you have a UBC account 
+								you can access:<br>
 						- Add CVS location: cascade.cs.ubc.ca /isd/se2/project/mylar/cvs<br>
 								- Check out all of the org.eclips.mylar.monitor projects</td>
 							</tr>
