*** empty log message ***

--- a/ubc-study.html
+++ b/ubc-study.html
@@ -207,7 +207,7 @@ preferences that you change. Mylar also generates statistics about the program
 elements that you edit and navigate, but removes any private information 
 identifying those elements by obfuscating their names and paths.&nbsp; 
 Approximately once every four days you will be asked to confirm an upload of 
-this interaction log to a UBC server, will have the opportunity to review the information being sent, and to answer a short 
+this interaction log to a UBC server, will have the opportunity to review all of the information being sent, and to answer a short 
 questionnaire.&nbsp; You will also have the option to remain anonymous 
 throughout the study.</p>
 <p>The study is composed of three phases.&nbsp; After a sufficient amount of 
@@ -226,7 +226,7 @@ Eclipse views</li>
 feature (Help menu -&gt; Software Updates -&gt; Find and Install -&gt; Search for new 
 features to install, then add the URL below Mylar as a New Remote Site called 
 &quot;Mylar phase0&quot;, click Finish, and proceed through the installation wizard):</p>
-<p>&nbsp;&nbsp;&nbsp; <b>http://www.cs.ubc.ca/~mylar/alpha/baseline </b> </p>
+<p>&nbsp;&nbsp;&nbsp; <b>www.cs.ubc.ca/~mylar/alpha/baseline </b> </p>
 <p>You are free to start the study anytime over the next two weeks, and if you 
 would like to join later just let us know.&nbsp; If you experience any problems 
 installing or using Mylar
