*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						presentation</a>.<p class="smallParagraph">
 								<b>
 								<font color="#6F7A92">Availability:</font></b> 
-								the preview release and user study has started.
+								the preview release user study has started.
 								<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
 								L</a><b><span style="font-weight: 400"><a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">et us know</a> if you 
 								would like to participate.</span></b></td>
