*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						presentation</a>.<p class="smallParagraph">
 								<b>
 								<font color="#6F7A92">Availability:</font></b> 
-								the preview release user study has started.
+								the user study preview release is underway.
 								<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
 								L</a><b><span style="font-weight: 400"><a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">et us know</a> if you 
 								would like to participate.</span></b></td>
@@ -102,9 +102,9 @@
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
-								July</td>
+								<font color="#666666"><b>July</b></font></td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
-								Preview started (v0.3)</td>
+								<font color="#666666"><b>Preview started (v0.3)</b></font></td>
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" rowspan="2">
