*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
 						presentation</a>.<p class="smallParagraph">
 								<b>
 								<font color="#6F7A92">Availability:</font></b> 
-								the user study preview release is underway.
+								the preview release has started, and involves 
+								participating in a user study.
 								<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
 								L</a><b><span style="font-weight: 400"><a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">et us know</a> if you 
-								would like to participate.</span></b></td>
+								would like an invitation to participate.</span></b></td>
                         <td class=smallParagraph width="30%" align="right" valign="top">
 						<table id="table4" borderColor="#111111" cellSpacing="4" cellPadding="3" border="0">
 							<tr>
