*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -219,7 +219,7 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0">
               <TR>
                 <td height=20><p align="left" class="smallParagraph"><b>
-                <font color="#666666">bugzilla feature</font></b></p></td>
+                <font color="#666666">bugzilla &amp; tasks components</font></b></p></td>
 			  </TR>
             </TABLE>
          </TD>          
@@ -258,8 +258,8 @@
 								<p class="smallParagraph">Decoupled from the 
 								rest of Mylar and can be built independently:<br>
 								- Add CVS location as above<br>
-								- Check out all of the 
-								org.eclipse.mylar.bugzilla projects</td>
+								- Check out org.eclipse.mylar: ..bugzilla.core, 
+								..bugzilla.ui, ..bugzilla.tests, ..tasks, ..core</td>
 							</tr>
 							</table>
 						</td>
@@ -306,7 +306,7 @@
             <TABLE align=center CELLPADDING="0" CELLSPACING="0" BORDER="0">
               <TR>
                 <td height=20><p align="left" class="smallParagraph"><b>
-                <font color="#666666">monitor feature</font></b></p></td>
+                <font color="#666666">monitor component</font></b></p></td>
 			  </TR>
             </TABLE>
          </TD>          
