*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -258,8 +258,8 @@
 								<p class="smallParagraph">Decoupled from the 
 								rest of Mylar and can be built independently:<br>
 								- Add CVS location as above<br>
-								- Check out org.eclipse.mylar: ..bugzilla.core, 
-								..bugzilla.ui, ..bugzilla.tests, ..tasks, ..core</td>
+								- Check out org.eclipse.mylar: bugzilla.core, 
+								bugzilla.ui, bugzilla.test, tasks, core</td>
 							</tr>
 							</table>
 						</td>
