*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -348,7 +348,8 @@
 								org.eclipse.mylar.aspectj support requires the 
 								AJDT plug-ins to be installed:<br>
 								- Create a fresh Eclipse (e.g. eclipse-3.1-ajdt) 
-								and install the AJDT plug-in<br>
+								and install the AJDT plug-in from 
+								download.eclipse.org/technology/ajdt/31/dev/update<br>
 								- In your original Eclipse: File -&gt; Import -&gt; 
 								Existing Plug-ins, then specify the Plug-in 
 								location and hit Next<br>
