*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -83,14 +83,15 @@
 							</tr>
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
-								<p class="smallParagraph">Mylar is in a 
-								pre-release stage, evolving rapidly, and 
-								provides no fixed APIs.&nbsp; We expect to 
-								announce some stability in the APIs before the 
-								end of summer, and until then the policy is 
-								extend at your own risk.&nbsp;If you are interested in extending Mylar please 
-								email <a href="mailto:mylar-dev@eclipse.org">
-								mylar-dev@eclipse.org</a>.</td>
+								<p class="smallParagraph">Mylar is evolving rapidly, and
+								<font color="#888888"><b>provides no fixed APIs</b></font>.&nbsp; We expect to 
+								announce some stability in the APIs and publish 
+								extension points by September, and until then the policy is 
+								extend at your own risk and make sure to 
+								subscribe to
+								<a href="mailto:mylar-dev@eclipse.org">
+								mylar-dev@eclipse.org</a> for news about any 
+								major refactorings.</td>
 							</tr>
 							</table>
 						</td>
