*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -354,9 +354,10 @@
 								- In your original Eclipse: File -&gt; Import -&gt; 
 								Existing Plug-ins, then specify the Plug-in 
 								location and hit Next<br>
-								- Select the following plug-ins: 
-								org.aspectj.ajde, org.aspectj.runtime, 
-								org.eclipse.ajdt.core, org.eclipse.ajdt.ui</td>
+								- Select the following 7 plug-ins: 
+								org.aspectj.ajde+runtime, 
+								org.eclipse.ajdt.core+ui, 
+								org.eclipse.contribution.visualiser+xref</td>
 							</tr>
 							</table>
 						</td>
