*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
                         <td class=paragraph width="5%"><img border=0 src="images/screenshot-mylar-small.gif"></td>
                         <td class=paragraph width="40%">
 								<p class="smallParagraph">
-								On large systems IDE views become overloaded 
+								The goal of the Mylar Technology project is to 
+								help the Eclipse UI scale gracefully to very 
+								large workspaces.&nbsp; Currently Eclipse views 
+								can quickly become overloaded 
 								with elements unrelated to the task at 
 								hand.&nbsp; Mylar monitors programming activity, 
 								actively searches for related elements, and 
@@ -84,7 +87,9 @@
 								<b>
 								<font color="#6F7A92">Availability:</font></b> 
 								the preview release has started, and involves 
-								participating in a user study.
+								participating in a user study to help us improve 
+								the usability of the tool before making it 
+								generally available from eclipse.org.
 								<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
 								L</a><b><span style="font-weight: 400"><a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">et us know</a> if you 
 								would like an invitation to participate.</span></b></td>
@@ -474,7 +479,7 @@
               <TR>
                 <TD height=20>
                   <FONT class=smallParagraph>&nbsp;<font color="#999999">Last 
-					modified on July 5, 2005.&nbsp; Please report comments to
+					modified on July 21, 2005.&nbsp; Please report comments to
 					<a href="https://bugs.eclipse.org/bugs/enter_bug.cgi?product=Mylar">
 					<font color="#999999">bugzilla</font></a>&nbsp;
                   </font></TD>
