Misc release wrap-up fixes.

--- a/dev.html
+++ b/dev.html
@@ -91,7 +91,7 @@
 								subscribe to
 								<a href="mailto:mylar-dev@eclipse.org">
 								mylar-dev@eclipse.org</a> for news about any 
-								major refactorings.</td>
+								major refactorings. </td>
 							</tr>
 							</table>
 						</td>
@@ -442,7 +442,10 @@
 								eclipse.org soon. If you have a UBC account 
 								you can access:<br>
 						- Add CVS location: cascade.cs.ubc.ca /isd/se2/project/mylar/cvs<br>
-								- Check out all of the org.eclips.mylar.monitor projects</td>
+								- Check out all of the org.eclips.mylar.monitor projects<br>
+								For running manual tests on the wizards from 
+								within the runtime workspace, use the following 
+								launch argument: -showmylarwizards</td>
 							</tr>
 							</table>
 						</td>
