*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
 					<table border="0" cellpadding="4" width="100%">
                       <tr>
                         <td class=smallParagraph width="100%">
-						<table cellSpacing="4" cellPadding="3" width="100%" border="0" bordercolor="#111111" id="table2">
+						Please report bugs and feature requests to
+						<a href="https://bugs.eclipse.org/bugs/enter_bug.cgi?product=Mylar">
+						Bugzilla</a>.<table cellSpacing="4" cellPadding="3" width="100%" border="0" bordercolor="#111111" id="table2">
                       	<tr>
                         <td class="smallParagraph" align="left" valign="top" bgcolor="#F4F5F7">
                         <a href="mailto:mylar-users@eclipse.org">
