--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
+								July</td>
+								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
+								<a href="http://www.eclipsezone.com/forums/thread.jspa?messageID=91847719&#91847719">
+								Bugzilla plug-ins</a></td>
+							</tr>
+							<tr>
+								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
 								<b><span style="font-weight: 400">July</span></b></td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
 								<b><span style="font-weight: 400">Preview started (v0.3.1)</span></b></td>
