*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -120,22 +120,18 @@
 								Zest</a> component created</td>
 							</tr>
 							<tr>
-								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
+								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5" rowspan="3">
 								July</td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
 								<a href="http://www.eclipsezone.com/forums/thread.jspa?messageID=91847763&#91847763">
 								Mylar is the next killer app for Eclipse..</a></td>
 							</tr>
 							<tr>
-								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
-								July</td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
 								<a href="http://www.eclipsezone.com/forums/thread.jspa?messageID=91847719&#91847719">
 								Bugzilla plug-ins</a></td>
 							</tr>
 							<tr>
-								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
-								<b><span style="font-weight: 400">July</span></b></td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
 								<b><span style="font-weight: 400">Preview started (v0.3.1)</span></b></td>
 							</tr>
@@ -490,7 +486,7 @@
               <TR>
                 <TD height=20>
                   <FONT class=smallParagraph>&nbsp;<font color="#999999">Last 
-					modified on July 21, 2005.&nbsp; Please report comments to
+					modified on Sept. 12, 2005.&nbsp; Please report comments to
 					<a href="https://bugs.eclipse.org/bugs/enter_bug.cgi?product=Mylar">
 					<font color="#999999">bugzilla</font></a>&nbsp;
                   </font></TD>
