Edited title and added sentence to intro paragraph

--- a/zest.html
+++ b/zest.html
@@ -77,7 +77,7 @@
 								<td class=smallParagraph align="left" valign="top">
 								<h3 align="center">
 								<font color="#6F7A92"><br>
-								Zest: The Eclipse Visualization Toolkit</font></h3>
+								Zest Component</font></h3>
 								</td>
 							</tr>
 							<tr>
@@ -89,9 +89,12 @@
                       <tr>
                         <td valign=top class=paragraph width="5%"><img border=0 src="images/zest_screen.jpg"></td>
                         <td class=paragraph width="60%">
-								<p class="smallParagraph">
+								<p >
 								<strong>Zest: The Eclipse Visualization Toolkit,</strong> is a set of 
-								visualization components built for Eclipse.  The entire Zest library has been
+								visualization components built for Eclipse.  
+								Zest is a component of the Mylar project that 
+								can be used independently of the Mylar IDE 
+								support. The entire Zest library has been
 								developed in SWT and integrate seamlessly within Eclipse because of its
 								recognized design.   Zest has been modeled after JFace, and all the Zest views
 								conform to the same standards and conventions as existing Eclipse views.  This
@@ -107,11 +110,11 @@
 								<LI>Nested Graph Viewer</li>
 								<LI>Matrix Viewer</li>
 								</ul>
-								The Zest project also contains a graph layout package which can be used 
+								<p>The Zest project also contains a graph layout package which can be used 
 								independently.  The graph layout package can be used within existing
 								Java applications (SWT or AWT) to provider layout locations for a set of
 								entities and relationships.  We currently support the following layout 
-								algorithms:
+								algorithms:</p>
 								<UL>
 								<LI>Spring Layout Algorithm</li>
 								<LI>Fade Layout Algorithm</li>
