--- a/zest.html
+++ b/zest.html
@@ -77,7 +77,7 @@
 								<td class=smallParagraph align="left" valign="top">
 								<h3 align="center">
 								<font color="#6F7A92"><br>
-								Zest Component</font></h3>
+								Zest Component</font></h3><br>
 								</td>
 							</tr>
 							<tr>
