Whitespace and font fixes

--- a/dev.html
+++ b/dev.html
@@ -73,9 +73,9 @@
                       <tr>
                         <td width="100%">
 	<table border="0" cellpadding="0" width="100%" id="table12">
-							<tr>
+							<tr height=45>
 								<td class=smallParagraph align="left" valign="top">
-								<h3 align="center">
+								<h3 align="center" valign="center">
 								<font color="#6F7A92"><br>
 								Mylar Developer 
 								Documentation</font></h3>
