--- a/zest.html
+++ b/zest.html
@@ -73,11 +73,11 @@
                       <tr>
                         <td width="100%">
 	<table border="0" cellpadding="0" width="100%" id="table12">
-							<tr>
+							<tr height=50>
 								<td class=smallParagraph align="left" valign="top">
-								<h3 align="center">
+								<h3 valign="center" align="center">
 								<font color="#6F7A92"><br>
-								Zest Component</font></h3><br>
+								Zest Component</font></h3>
 								</td>
 							</tr>
 							<tr>
