*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -92,7 +92,7 @@
 								mylar-dev@eclipse.org</a>.&nbsp; Also consider 
 								looking at the bugzilla
 								<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=Mylar&content=[discussion]">
-								discussions of new and planned feature</a>.</td>
+								discussions of new and planned features</a>.</td>
 							</tr>
 							</table>
 						</td>
