*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -172,8 +172,9 @@
 	<table border="0" cellpadding="0" width="100%" id="table4">
 							<tr>
 								<td class=smallParagraph align="left" valign="top">
-								<p class="smallParagraph">Mylar requires Eclipse 
-								SDK 3.1 and JDK 1.5.&nbsp; To set up a workspace 
+								<p class="smallParagraph">Building Mylar from 
+								HEAD requires Eclipse 
+								SDK 3.2M2 and JDK 1.5.&nbsp; To set up a workspace 
 								for mylar development:<br>
 								- Add CVS location: dev.eclipse.org 
 								/home/technology<br>
