--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5" rowspan="3">
 								July</td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
-								<a href="http://www.eclipsezone.com/forums/thread.jspa?messageID=91847763&#91847763">
-								Mylar is the next killer app for Eclipse..</a></td>
+								<a href="http://www.eclipsezone.com/eclipse/forums/t20933.html">Mylar is the next killer app for Eclipse..</a></td>
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
