*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -181,7 +181,13 @@
 								- Check out all of the projects under 
 								org.eclipse.mylar (EXCEPT org.eclipse.mylar.aspectj, which has additional 
 								dependencies)<br>
-								- Everything should compile without any warnings</td>
+								- Everything should compile without any warnings<br>
+								<br>
+								To set up a workspace for development&nbsp; on 
+								Eclipse 3.1: <br>
+								- Right-click the org.eclipse.mylar.java 
+								project, Team -&gt; Switch to Another Branch...<br>
+								- Refresh the Branches and select eclipse_3_1</td>
 							</tr>
 							</table>
 						</td>
