*** empty log message ***

--- a/dev.html
+++ b/dev.html
@@ -179,7 +179,8 @@
 								- Add CVS location: dev.eclipse.org 
 								/home/technology<br>
 								- Check out all of the projects under 
-								org.eclipse.mylar (EXCEPT org.eclipse.mylar.aspectj, which has additional 
+								org.eclipse.mylar (EXCEPT mylar.aspectj, 
+								mylar.sandbox, and mylar.zest which have additional 
 								dependencies)<br>
 								- Everything should compile without any warnings<br>
 								<br>
