Fixed Bugzilla Bug 112572: allow a stats generating action to specify stats collectors

--- a/dev.html
+++ b/dev.html
@@ -180,7 +180,7 @@
 								/home/technology<br>
 								- Check out all of the projects under 
 								org.eclipse.mylar (EXCEPT mylar.aspectj, 
-								mylar.sandbox, and mylar.zest which have additional 
+								mylar.sandbox, mylar.viz, and mylar.zest which have additional 
 								dependencies)<br>
 								- Everything should compile without any warnings<br>
 								<br>
