Fixed Bugzilla Bug 112563: create html structure bridge to track URL navigation
And other misc fixes

--- a/dev.html
+++ b/dev.html
@@ -538,19 +538,20 @@
 								later, P5: requires user input to be 
 								prioritized.<br>
 								- <b><font color="#666666">Releases</font></b>: 
-								for the duration of the study, a stable 
-								minor-minor version number rev happen each 
-								Friday.<br>
+								a stable 
+								minor-minor version number rev is planned for 
+								each Friday.<br>
 								- <b><font color="#666666">Patches</font></b>: right-click the 
 								corresponding project and select Team -&gt; Create 
 								Patch.&nbsp; Repeat for each project, naming the 
 								patch accordingly (e.g. patch-core.txt, patch-core.tests.txt). 
 								Please submit a unit test along with the patch.<br>
+								- <b><font color="#666666">Before committing: </font></b>
+								make sure that there are no warnings, no console 
+								output, and that org.eclipse.mylar.tests.AllTests 
+								passes<br>
 								- For handling exceptions and logging use 
-								MylarPlugin.log(..) or MylarPlugin.fail(..) <br>
-								- Before committing run 
-								org.eclipse.mylar.tests.AllTests<br>
-								<br>
+								MylarPlugin.log(..) or MylarPlugin.fail(..)<br>
 &nbsp; </td>
 							</tr>
 							</table>
