Planning game wizard fixes

--- a/dev.html
+++ b/dev.html
@@ -547,9 +547,8 @@
 								patch accordingly (e.g. patch-core.txt, patch-core.tests.txt). 
 								Please submit a unit test along with the patch.<br>
 								- <b><font color="#666666">Before committing: </font></b>
-								make sure that there are no warnings, no console 
-								output, and that org.eclipse.mylar.tests.AllTests 
-								passes<br>
+								make sure that there are no warnings, and that org.eclipse.mylar.tests.AllTests 
+								passes with no console output<br>
 								- For handling exceptions and logging use 
 								MylarPlugin.log(..) or MylarPlugin.fail(..)<br>
 &nbsp; </td>
