*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -86,13 +86,11 @@
 						presentation</a>.<p class="smallParagraph">
 								<b>
 								<font color="#6F7A92">Availability:</font></b> 
-								the preview release is still underway, and involves 
-								participating in a user study to help us improve 
-								the usability of the tool before making it 
-								generally available from eclipse.org.
-								<a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">
-								L</a><b><span style="font-weight: 400"><a href="mailto:mylar@cs.ubc.ca?subject=please notify me of the mylar pre-release">et us know</a> if you 
-								would like an invitation to participate.</span></b></td>
+								Mylar 0.4.0 has been publicly released.&nbsp; 
+								The web site will be update shortly, for now 
+								refer to the
+								<a href="http://dev.eclipse.org/mhonarc/lists/mylar-dev/msg00104.html">
+								following message for availability</a>.</td>
                         <td class=smallParagraph width="30%" align="right" valign="top">
 						<table id="table4" borderColor="#111111" cellSpacing="4" cellPadding="3" border="0">
 							<tr>
@@ -102,9 +100,9 @@
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
-								<font color="#888888"><i>Oct.</i></font></td>
+								Oct.</td>
 								<td class="smallParagraph" vAlign="top" align="left" width="*" bgColor="#F4F5F7" bordercolor="#F1F3F5">
-								<font color="#888888"><i>Planned public release (v0.4)</i></font></td>
+								Mylar 0.4.0 released</td>
 							</tr>
 							<tr>
 								<td class="smallParagraph" vAlign="top" align="left" width="30" bordercolor="#F1F3F5">
@@ -427,9 +425,9 @@
 								implementation for Java development.&nbsp; A 
 								driving goal of the implementation is to make 
 								Mylar easy for the eclipse.org community to 
-								build on and extend. If you are interested 
-								in becoming involved with development or in sharing ideas 
-								please subscribe to the
+								build on and extend. If you are interested in 
+								becoming involved with development or in sharing 
+								ideas please subscribe to the
 								<a href="http://dev.eclipse.org/mailman/listinfo/mylar-dev">
 								developer list</a>.&nbsp;<br>
 &nbsp; <br>
