*** empty log message ***

--- a/sandbox/dev.html
+++ b/sandbox/dev.html
@@ -1,6 +1,6 @@
 <div id="maincontent">
 	<div id="midcolumn">
-		<div align="center"><h1>$pageTitle</h1></div>
+		<div align="center"><h1>Mylar Developers</h1></div>
           
         Mylar is evolving 
 		rapidly, and slowly stabilizing initial APIs and 
