*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 						presentation</a>.<p class="smallParagraph">
 								<b>
 								<font color="#6F7A92">Availability:</font></b> 
-								Mylar 0.4.0 has been publicly released.&nbsp; 
-								The web site will be update shortly, for now 
-								refer to the
+								Mylar 0.4.0 has been released.&nbsp; The web 
+								site will be update later today (Nov. 1st), for 
+								now refer to the
 								<a href="http://dev.eclipse.org/mhonarc/lists/mylar-dev/msg00104.html">
-								following message for availability</a>.</td>
+								following message for the update site</a>. </td>
                         <td class=smallParagraph width="30%" align="right" valign="top">
 						<table id="table4" borderColor="#111111" cellSpacing="4" cellPadding="3" border="0">
 							<tr>
