--- a/project-page-paragraph.html
+++ b/project-page-paragraph.html
@@ -1,4 +1,4 @@
-<p><b><a href="/technology/mylar">
+<p><b><a href="/mylar/">
 Mylar is a task focused UI for Eclipse that makes working with very large workspaces 
 as easy as working with small ones. It provides task management facilities and 
 monitors your work activity to identify information relevant to the task-at-hand. 
