*** empty log message ***

--- a/project-page-paragraph.html
+++ b/project-page-paragraph.html
@@ -1,4 +1,5 @@
-<p><b><a href="/mylar/">Mylar</a>
+<p>
+<b><a href="/mylar/">Mylar</a></b>
 <p>
 Mylar is a task focused UI for Eclipse that makes working with very large workspaces 
 as easy as working with small ones. It provides task management facilities and 
