Progress on: long: web site update

--- a/project-page-paragraph.html
+++ b/project-page-paragraph.html
@@ -1,9 +1,5 @@
 <p>
 <b><a href="/mylar/">Mylar</a></b>
 <p>
-Mylar is a task focused UI for Eclipse that makes working with very large workspaces 
-as easy as working with small ones. It provides task management facilities and 
-monitors your work activity to identify information relevant to the task-at-hand. 
-Mylar uses this task context to focus the Eclipse UI on what's interesting, hide 
-what's uninteresting, and search out what's related. 
+Mylar is a task focused UI for Eclipse that makes working with very large workspaces as easy as working with small ones. It supports task management and monitors your work activity to identify information relevant to the task-at-hand. Mylar uses this task context to focus the Eclipse UI on the interesting information, hide the uninteresting, and automatically find what's related. 
 </p>
