--- a/publications/2005-04-mylar-proposal.html
+++ b/publications/2005-04-mylar-proposal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Graphical Modeling Framework Project Proposal</title>
+<title>Mylar Project Proposal</title>
 <link type="text/css" rel="stylesheet" href="http://www.eclipse.org/proposals/eclipse-webtools/templates/eclipse/eclipse.css">
 </head>
 
