NEW - bug 191406: rename Mylar project to Mylyn https://bugs.eclipse.org/bugs/show_bug.cgi?id=191406

--- a/rename.html
+++ b/rename.html
@@ -11,10 +11,10 @@
 <h2 align="center">Mylar to Mylyn Project Rename FAQ</h2>
 <p>About the name: the <a href="http://en.wikipedia.org/wiki/Myelin">myelin</a> 
 substance accelerates our thoughts by making neurons much more efficient at 
-conducting electricity. The <b><a href="http://eclipse.org/mylyn">Mylyn</a></b> 
+conducting electricity. The <a href="http://eclipse.org/mylyn">Mylyn</a> 
 name is a tribute to this substance, as many users claim that our tools increase 
 efficiency to the point where we can code at the speed of thought. The referred 
-pronunciation is&nbsp; 'mIl&amp;n, like saying &quot;my&quot; and &quot;lynn&quot; quickly.</p>
+pronunciation is&nbsp; <tt>'mIl&amp;n</tt>, like saying &quot;my&quot; and &quot;lynn&quot; quickly.</p>
 <h3>Why is the Eclipse Mylar project changing its name to Mylyn?</h3>
 <p>The Eclipse Foundation takes a lot of pride from the efforts it puts into 
 shipping clean intellectual property. We want our ecosystem to be able to adopt 
