--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-	<table border="0" cellpadding="10">
+	<table border="0" cellpadding="5">
      	<tr> 
       		<td valign="top">
 	          	<a href="images/mylyn-2.0.png"><img border=0 src="images/tasklist-splash.jpg"></a>
@@ -20,12 +20,12 @@
 						<td width=20></td>
 						<td><a href="/mylyn/downloads"><img border=0 src="images/downloads.gif"></a></td>
 						<td>
-							<table border="0" cellpadding="5">
+							<table border="0" cellpadding="0">
 								<tr>
-				          			<td><h2><a href="/mylyn/downloads">Downloads</a></h2></td>
+				          			<td  valign=bottom><a href="/mylyn/downloads">Downloads</a></td>
 								</tr>
 								<tr>
-					          		<td>Get the latest and greatest</td>
+					          		<td>&nbsp;</td>
 					          	</tr>
 							</table>
 						</td>
@@ -34,9 +34,9 @@
 						<td width=20></td>
 						<td><a href="/mylyn/downloads"><img border=0 src="images/community.jpg"></a></td>
 						<td>
-							<table border="0" cellpadding="5">
+							<table border="0" cellpadding="0">
 								<tr>
-				          			<td><a href="/mylyn/downloads"><h2>Community</h2></a></td>
+				          			<td><h2><a href="/mylyn/downloads">Community</a></h2></td>
 								</tr>
 								<tr>
 					          		<td>get help and interact with users and developers</td>
@@ -46,6 +46,7 @@
 	          		</tr>
 	         	</table>
 				<div class="homeitem3col">
+					<br>&nbsp;
 					<h3>News</h3>
 					<ul>
 						<li>
