--- a/new/new.html
+++ b/new/new.html
@@ -156,7 +156,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table353">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Mylyn Working Sets</b></p>
+			<p align="right"><b>Working Sets</b></p>
 			</td>
 			<td valign="top" width="70%">
 			<p class="MsoPlainText">Mylyn now provides a unified working set 
