--- a/new/new.html
+++ b/new/new.html
@@ -1,9 +1,7 @@
 <html>
 <body bgcolor="FFFFFF">
 
-<p>For the current New &amp; Noteworthy see: <b>
-<a href="http://www.eclipse.org/mylyn/doc/new.php">
-http://eclipse.org/mylyn/doc/new</a></b></p>
+<p><i>Updates in progress...</i></p>
 
 <table border="1" style="border-collapse: collapse" width="100%" id="table128" cellpadding="4" bordercolor="#FFFFFF">
 	<tr>
