--- a/new/new.html
+++ b/new/new.html
@@ -154,7 +154,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table353">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Working Sets</b></p>
+			<p align="right"><b>Working Sets<br>
+			(Eclipse 3.3 only)</b></p>
 			</td>
 			<td valign="top" width="70%">
 			<p class="MsoPlainText">Mylyn now provides a unified working set 
@@ -583,8 +584,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 <table cellpadding="10" cellspacing="0" http://www.eclipse.org/mylar/doc/images/dev/ id="table343">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
-			<p align="right"><b>Dependencies show as subtasks<br>
-			(Experimental)</b></p>
+			<p align="right"><b>Dependencies show as subtasks</b></p>
 			</td>
 			<td valign="top" width="70%">
 			If a bug A is set to &quot;depend on&quot; B, bug B will be shown as a subtask 
