NEW - bug 194875: manage eclipse.org/mylyn web site content https://bugs.eclipse.org/bugs/show_bug.cgi?id=194875

--- a/new/new.html
+++ b/new/new.html
@@ -35,7 +35,7 @@
 		contributed.&nbsp; Shawn Minto resolved 6 bugs and provided numerous 
 		fixes. Boris Pruessmann contributed task editor content assist. 
 		Additional bug fixes and enhancements were provided by Benjamin Pasero, 
-		Lubox Pochman, Tobias Widmer, Bryan Hunt, Andrew Overholt and Frank 
+		Lubos Pochman, Tobias Widmer, Bryan Hunt, Andrew Overholt and Frank 
 		Becker. </font></td>
 	</tr>
 	<tr>
